src/snapshots/jj_pr__tests__sync@hydro-prs-approved-1778006800.json.gz.snap
---
source: src/tests.rs
assertion_line: 129
expression: plan_sync(&f)
input_file: src/fixtures/hydro-prs-approved-1778006800.json.gz
---
push: #2841 (mingwei/delete-delaytype), #2746 (mingwei/sqs-rebase)
