src/snapshots/jj_pr__tests__sync@hydro-remade2-pr.1778101559.json.gz.snap
---
source: src/tests.rs
expression: plan_sync(&f)
input_file: src/fixtures/hydro-remade2-pr.1778101559.json.gz
---
stamp #2812 trailer on luuklzktmzky
push: #2812 (mingwei/delete-subgraph-id)
