src/snapshots/jj_pr__tests__sync@hydro-stale-trailers.json.gz.snap
---
source: src/tests.rs
expression: plan_sync(&f)
input_file: src/fixtures/hydro-stale-trailers.json.gz
---
stamp #2909 trailer on tsoutuqvnsmx
stamp #2909 trailer on mlpnpmytkllz
stamp #2909 trailer on wsvorvvkqpus
stamp #2909 trailer on wqrurskqwpty
stamp #2909 trailer on rkpvnlqktpkp
stamp #2909 trailer on nkvnkwksstry
stamp #2909 trailer on ylyxylnpuwmp
stamp #2909 trailer on lkpqzyknsysm
stamp #2909 trailer on vxwrpsrpnxnv
stamp #2909 trailer on uzxvymzkwsoo
stamp #2909 trailer on kvonvxptywnv
stamp #2909 trailer on oyqwypsoqono
stamp #2909 trailer on onkpmnltlskr
