src/snapshots/jj_pr__tests__sync@jj-pr-ambiguous.json.gz.snap
---
source: src/tests.rs
expression: plan_sync(&f)
input_file: src/fixtures/jj-pr-ambiguous.json.gz
---
abandon merged #3 (delete mingwei/pull-parent-pr-out-of-child)
push: #7 (mingwei/pull-parent-pr-out-of-child), #5 (mingwei/clickable-pr), #4 (mingwei/confirm)
update #5 (mingwei/clickable-pr) title -> "Make PR # references into clickable URL links in create output"
