src/snapshots/jj_pr__tests__sync@jj-pr-ambiguous.json.snap
---
source: src/tests.rs
expression: plan_sync(&f)
input_file: src/fixtures/jj-pr-ambiguous.json
---
rebase children of #3 (mingwei/pull-parent-pr-out-of-child) onto trunk()
abandon merged #3 (mingwei/pull-parent-pr-out-of-child)
push: #7 (mingwei/pull-parent-pr-out-of-child), #5 (mingwei/clickable-pr), #4 (mingwei/confirm)
update #7 (mingwei/pull-parent-pr-out-of-child) base -> main
