src/snapshots/jj_pr__tests__sync@jj-pr-conflict-1778014006.json.gz.snap
---
source: src/tests.rs
expression: plan_sync(&f)
input_file: src/fixtures/jj-pr-conflict-1778014006.json.gz
---
skip push #36 (handle-forks) — has content conflicts
push: #45 (red-x)
update #45 (red-x) title -> "feat: use red ✗ for conflicted branches in show/log views"
