src/snapshots/jj_pr__tests__sync@jj-pr-dump-1065390.json.gz.snap
---
source: src/tests.rs
expression: plan_sync(&f)
input_file: src/fixtures/jj-pr-dump-1065390.json.gz
---
stamp #2798 trailer on pptpkqskpyxs
push: #2798 (mingwei/delete-intermediate-subgraph), #2801 (mingwei/delete-state-api-usage), #2829 (mingwei/singleton-refs-dfir), #2811 (mingwei/delete-schedule-subgraph-args), #2810 (mingwei/delete-metrics-slotvec), #2812 (mingwei/delete-subgraph-id)
update #2798 (mingwei/delete-intermediate-subgraph) title -> "Address unresolved PR #2798 review comments"
update #2829 (mingwei/singleton-refs-dfir) title -> "Move DFIR singleton handling from RefCell to plain local variables"
update #2812 (mingwei/delete-subgraph-id) title -> "cleanup: remove SubgraphId, SubgraphTag, LoopId, LoopTag, simplify StateLifespan"
