src/snapshots/jj_pr__tests__sync@jj-pr-merge-needs-abandon-1778103977.json.gz.snap
---
source: src/tests.rs
expression: plan_sync(&f)
input_file: src/fixtures/jj-pr-merge-needs-abandon-1778103977.json.gz
---
skip merged #50 (remove-aliases) — trunk stale, run `jj git fetch`
